--- a/LibraryManagement/.vscode/settings.json
+++ b/LibraryManagement/.vscode/settings.json
@@ -3,6 +3,9 @@
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\Users\\shrey\\Downloads\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar"
+        "c:\\Users\\shrey\\Downloads\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar",
+        "c:\\Users\\shrey\\Downloads\\jakarta.mail-api-2.1.3.jar",
+        "c:\\Users\\shrey\\Downloads\\jakarta.activation-api-2.1.3.jar",
+        "c:\\Users\\shrey\\Downloads\\jakarta.mail-2.0.3.jar"
     ]
 }
